# apod-fetcher

./: .gitignore  .pre-commit-config.yaml  README.md  apod_fetcher.py  pyproject.toml
systemd_files/: apod-fetcher-rotate.service  apod-fetcher-rotate.timer  apod-fetcher.service  apod-fetcher.timer
utils/: install.sh
